# CemrgApp

./: .BuildProcess.sh  .gitignore  .travis.yml  CNAME  README.md  _config.yml  about.md  actions-node16-refactor.patch  back2home.md  community.md  contributors.md  documentation.md  engagement.md  index.md  pre-releases.md  resources.md  versionOnsplashScreen.sh
.github/: code_analysis.py  codecov.yml
.github/workflows/: analysis.yml  build.yml  test.yml
CemrgApp/: CMakeLists.txt
CemrgApp/Applications/MainApp/: CMakeLists.txt  CemrgApp.cpp  CemrgApp.ini  splashscreen.qrc  target_libraries.cmake  version.txt
CemrgApp/Applications/MainApp/icons/: icon.icns
CemrgApp/Apps-build/: CMakeCache.txt  Project.cbp
CemrgApp/Apps/CemrgApp/: target_libraries.cmake
CemrgApp/CMake/: FindVMTK.cmake
CemrgApp/CMake/PackageDepends/: MITK_VMTK_Config.cmake
CemrgApp/CMakeExternals/: VMTK.cmake
CemrgApp/Modules/CemrgAppModule/: CMakeLists.txt  files.cmake
CemrgApp/Modules/CemrgAppModule/cmdapps/: CMakeLists.txt  CemrgAppCmdTemplate.cpp  CemrgAppRegionProperties.cpp  CemrgApplyExternalClippers.cpp  CemrgAreaFromThreshold.cpp  CemrgClippingTool.cpp  CemrgColourSurface.cpp  CemrgFixShellApp.cpp  CemrgIM2INR.cpp  CemrgImageConvertFormat.cpp  CemrgMorphAnalysis.cpp  CemrgProjectLgeToVtkMesh.cpp  CemrgProjectionOptions.cpp  CemrgResampleReorient.cpp  CemrgSimpleRegistration.cpp  CemrgVentricleSegmRelabel.cpp
CemrgApp/Modules/CemrgAppModule/include/: CemrgAhaUtils.h  CemrgAtriaClipper.h  CemrgAtrialTools.h  CemrgCommandLine.h  CemrgCommonUtils.h  CemrgMeasure.h  CemrgPower.h  CemrgScar3D.h  CemrgScarAdvanced.h  CemrgStrains.h
CemrgApp/Modules/MyCemrgLib/: CemrgAtriaClipper.cpp  CemrgAtriaClipper.h  CemrgCommandLine.cpp  CemrgImageUtils.h  CemrgMeasure.cpp  CemrgStrains.cpp  CemrgTests.cpp  files.cmake
CemrgApp/Plugins/: PluginList.cmake  Plugins.cmake
CemrgApp/Plugins/kcl.cemrgapp.atrialfibres/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.easi/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.mainapp/: files.cmake  plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.mmcwplugin/: files.cmake
CemrgApp/Plugins/kcl.cemrgapp.powertrans/: CMakeLists.txt  files.cmake  manifest_headers.cmake
CemrgApp/Plugins/kcl.cemrgapp.renderwindoweditor/: CMakeLists.txt  files.cmake  manifest_headers.cmake
CemrgApp/Plugins/kcl.cemrgapp.scar/: CMakeLists.txt  manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.wathca/: CMakeLists.txt  files.cmake  plugin.xml
CemrgApp/Plugins/my.cemrgproject.cemrgapp/: CMakeLists.txt  manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/my.cemrgproject.easi/: CMakeLists.txt
CemrgApp/Plugins/my.cemrgproject.festive/: manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/my.cemrgproject.mmcwplugin/: files.cmake  manifest_headers.cmake
CemrgApp/Plugins/my.cemrgproject.mmeasurement/: manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/my.cemrgproject.renderwindoweditor/: files.cmake
CemrgApp/Plugins/my.cemrgproject.scar/: files.cmake  manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/my.cemrgproject.wathca/: CMakeLists.txt  files.cmake  manifest_headers.cmake
TestScripts/: BuildProcess.sh
Version1.0/: Changelog.txt  LICENSE  README.md
Version1.0/Apps-build/: Makefile  cmake_install.cmake
Version1.0/Apps/CemrgApp/: CMakeLists.txt  CemrgApp.cpp~
Version1.0/CMake/: CPackSetup.cmake
Version1.0/Modules/: CMakeLists.txt
Version1.0/Modules/MyCemrgLib/: CMakeLists.txt  CemrgCommandLine.h  CemrgImageUtils.cpp  CemrgMeasure.h  CemrgScar3D.cpp  CemrgScar3D.h  CemrgStrains.h
Version1.0/Plugins/my.cemrgproject.cemrgapp/: files.cmake  plugin.xml~
Version1.0/Plugins/my.cemrgproject.easi/: files.cmake  manifest_headers.cmake  plugin.xml
Version1.0/Plugins/my.cemrgproject.festive/: CMakeLists.txt  files.cmake
Version1.0/Plugins/my.cemrgproject.mmcwplugin/: CMakeLists.txt  plugin.xml
Version1.0/Plugins/my.cemrgproject.mmeasurement/: CMakeLists.txt  files.cmake
Version1.0/Plugins/my.cemrgproject.renderwindoweditor/: CMakeLists.txt  manifest_headers.cmake  plugin.xml
Version1.0/Plugins/my.cemrgproject.scar/: CMakeLists.txt  plugin.xml~
Version1.0/Plugins/my.cemrgproject.wathca/: plugin.xml~
Version2.0/: README.md
Version2.0/Applications/: AppList.cmake
Version2.0/Applications/MainApp/: CMakeLists.txt  CemrgApp.cpp  startCemrgApp.bat.in
Version2.0/CMake/: CPackSetup.cmake
Version2.0/CMakeExternals/: ExternalProjectList.cmake  MIRTK.cmake  VMTK.cmake
Version2.0/Modules/: ModuleList.cmake
Version2.0/Modules/CemrgAppModule/: CMakeLists.txt
Version2.0/Plugins/: PluginList.cmake
Version2.0/Plugins/kcl.cemrgapp.atrialfibres/: files.cmake  manifest_headers.cmake  plugin.xml
Version2.0/Plugins/kcl.cemrgapp.festive/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Version2.0/Plugins/kcl.cemrgapp.mainapp/: CMakeLists.txt  files.cmake  manifest_headers.cmake
Version2.0/Plugins/kcl.cemrgapp.mmcwplugin/: CMakeLists.txt  manifest_headers.cmake  plugin.xml
Version2.0/Plugins/kcl.cemrgapp.mmeasurement/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Version2.0/Plugins/kcl.cemrgapp.powertrans/: plugin.xml
Version2.0/Plugins/kcl.cemrgapp.renderwindoweditor/: plugin.xml
Version2.0/Plugins/kcl.cemrgapp.scar/: files.cmake
Version2.0/Plugins/kcl.cemrgapp.wathca/: CMakeLists.txt  manifest_headers.cmake
_includes/: footer.html
assets/css/: style.scss
(+371 files in other folders)
